Minor stylistic changes

--- a/public/css/flexiblegs.css
+++ b/public/css/flexiblegs.css
@@ -19,7 +19,7 @@
   font-size: 1rem;
   vertical-align: top;
 }
-.flexbox {
+.flexbox-fgs {
   -webkit-justify-content: center;
   justify-content: center;
   -webkit-align-content: flex-start;
