--- a/public/css/main.css
+++ b/public/css/main.css
@@ -111,6 +111,9 @@ body {
 }
 
 .header {
+    position: fixed;
+    top: 0;
+    width: 100%;
     background: #000;
     /*background-image: url(../img/bg-header.png);*/
     background-position: left center;
@@ -118,6 +121,7 @@ body {
     color: #fff;
     padding: 8px;
     height: 60px;
+    z-index: 99;
 }
 
 .wrapper {
@@ -140,10 +144,15 @@ body {
 }
 
 .navigation {
-    background: orange;
+    position: fixed;
+    top: 70px;
+    z-index: 99;
+    width: 100%;
+    background: #FF8000;
     color: #fff !important; 
     font-size: 0.875em;
     clear: both;
+    box-shadow: 0px 1px 3px #222;
 }
 
 .navigation--selected {
@@ -169,14 +178,22 @@ body {
 }
 
 .sidebar {
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
     display: inline-block;
-    width: 60px;
-    background-color: blue;
+    width: 58px;
+    background-color: #4BB5C1;
+    z-index: 5;
+    box-shadow: inset -1px 4px 5px #222;
 }
 
 .side-list {
     margin: 0;
+    margin-top: 120px;
     padding: 0;
+    padding-right: 3px;
 }
 
 .side-icon {
@@ -185,12 +202,15 @@ body {
     color: #fff;
     text-transform: uppercase;
     text-align: center;
+    padding-top: 48px;
 }
 
 .cardui {
     /*float: left;*/
     display: inline-block;
-    width: 94%;
+    width: 93%;
+    margin-left: 75px;
+    margin-top: 110px;
 }
 
 .card {
@@ -709,6 +729,19 @@ body {
        (-webkit-min-device-pixel-ratio: 1.25),
        (min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
+}
+
+@media (max-width: 1024px) {
+    .cardui {
+        width: 90%;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .cardui {
+        width: 88%;
+    }
 }
 
 /* ==========================================================================
