Added additional styles
-Added sidebar panels
-Added chained HTTP request to fill up data

--- a/public/template/pa.html
+++ b/public/template/pa.html
@@ -1,132 +1,53 @@
-<div class="padme" cg-busy="{promise:promise,message:'Loading Your Data...'}">
-    <form novalidate>
-        <div class="filter-box">
-            <div class="filter-box__form-element">
-                <label for="vid">Virtela Host ID</label><br/><input ng-model="cpe.vhid" class="filter-box__text-input" type="text" placeholder="CABRCV1-CROCS-RTR-1" />
-            </div>
-
-            <div class="filter-box__form-element">
-                <label for="if-desc">IF Description</label><br/>
-                <div class="filter-box__if-desc">
-                    <select ng-model="cpe.device" class="filter-box__text-input">
-                        <option>Serial</option>
-                        <option>E1</option>
-                        <option>T1</option>
-                    </select>
-                    <input ng-model="cpe.desc" class="filter-box__text-input" type="text" size="8" placeholder="0" />
-                </div>
-            </div>
-
-            <div class="filter-box__form-element">
-                <label for="start-date-time">Start Date/Time</label><br/>
-                <div class="filter-box__start-date-time">
-                    <input ng-model="cpe.stdt" class="filter-box__text-input filter-box__text-input--date" type="text" size="12" placeholder="2015-01-01" />
-                    <input ng-model="cpe.sttm" class="filter-box__text-input filter-box__text-input--time" type="text" size="10" placeholder="00:00:00" />
-                </div>
-            </div>
-
-            <div class="filter-box__form-element">
-                <label for="end-date-time">End Date/Time</label><br/>
-                <div class="filter-box__start-date-time">
-                    <input ng-model="cpe.enddt" class="filter-box__text-input filter-box__text-input--date" type="text" size="12" placeholder="2015-01-01" />
-                    <input ng-model="cpe.endtm" class="filter-box__text-input filter-box__text-input--time" type="text" size="10" placeholder="00:00:00" />
-                </div>
-            </div>
-            <button class="btn-template" ng-click="update(cpe)">GET</button>
+<div class="wrap gutter-5-xl gutter-10-xs gutter-out-xs" cg-busy="{promise:promise,message:'Loading Your Data...'}">
+    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+        <div class="card">
+            Card 1;
         </div>
-    </form>
-
-    <div id="line-chart">
     </div>
-
-    <div class="clear"></div>
-
-    <div class="data-grid">
-        <!-- <div class="data-grid__grid-title">DSX1 Interval Counters</div> -->
-        <div id="grid1" ui-grid="gridOptions" ui-grid-pagination ui-grid-exporter class="grid"></div>
-        <div class="pagination-grid">Current page: {{ gridApi2.pagination.getPage() }} of {{ gridApi2.pagination.getTotalPages() }}
-            <button type="button" class="btn-blue-left" ng-click="gridApi2.pagination.previousPage()"></button>
-            <button type="button" class="btn-blue-right" ng-click="gridApi2.pagination.nextPage()"></button>
+    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+        <div class="card">card 2</div>
+    </div>
+    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+        <div class="card">card 3</div>
+    </div>
+    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+        <div class="card">card 4</div>
+    </div>
+    <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+        <div class="card">
         </div>
-        <div class="clear"></div>
     </div>
-
-    <div class="data-summary">
-        <table>
-            <tr class="data-summary__header">
-                <td colspan="5">Error Summary</td>
-            </tr>
-            <tr>
-                <td>ES</td>
-                <td><span tooltip-html-unsafe="{{totals.es.instances}}" tooltip-placement="bottom">{{totals.es.count}}</span></td>
-                <td>DM</td>
-                <td><span tooltip="{{totals.uas.instances}}" tooltip-placement="bottom">{{totals.dm.count}}</span></td>
-                <td rowspan="5" class="text-center"><div class="error-totals"><span class="error-totals--number">{{totals.total_err}}</span><br/>Total Errors</div></td>
-            </tr>
-            <tr>
-                <td>UAS</td>
-                <td><span tooltip="{{totals.uas.instances}}" tooltip-placement="bottom">{{totals.uas.count}}</span></td>
-                <td>LES</td>
-                <td><span tooltip="{{totals.les.instances}}" tooltip-placement="bottom">{{totals.les.count}}</span></td>
-            </tr>
-            <tr>
-                <td>PCV</td>
-                <td><span  tooltip="{{totals.pcv.instances}}" tooltip-placement="bottom">{{totals.pcv.count}}</span></td>
-                <td>SES</td>
-                <td><span tooltip="{{totals.ses.instances}}" tooltip-placement="bottom">{{totals.ses.count}}</span></td>
-                <!--<td>LOS</td>
-                <td><span tooltip="{{totals.los.instances}}" tooltip-placement="bottom">{{totals.los.count}}</span></td>-->
-            </tr>
-            <tr>
-                <td>SEF</td>
-                <td><span tooltip="{{totals.sef.instances}}" tooltip-placement="bottom">{{totals.sef.count}}</span></td>
-                <td>CSS</td>
-                <td><span tooltip="{{totals.css.instances}}" tooltip-placement="bottom">{{totals.css.count}}</span></td>
-                <!--<td>LOF</td>
-                <td><span tooltip="{{totals.lof.instances}}" tooltip-placement="bottom">{{totals.lof.count}}</span></td>-->
-            </tr>
-            <tr>
-                <td>BES</td>
-                <td><span tooltip="{{totals.bes.instances}}" tooltip-placement="bottom" >{{totals.bes.count}}</span></td>
-                <td>LCV</td>
-                <td><span tooltip="{{totals.lcv.instances}}" tooltip-placement="bottom" >{{totals.lcv.count}}</span></td>
-            </tr>
-            <!--<tr>
-                <td>REM</td>
-                <td><span tooltip="{{totals.rem.instances}}" tooltip-trigger="click" tooltip-placement="bottom">{{totals.rem.count}}</span></td>
-            </tr>
-            <tr>
-
-                <td>AIS</td>
-                <td><span tooltip-html-unsafe="{{totals.ais.instances}}" tooltip-placement="bottom" tooltip-trigger="click">{{totals.ais.count}}</span></td>
-            </tr>-->
-
-        </table>
+    <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+        <div class="card">card 6</div>
     </div>
-
-    <div class="data-summary">
-        <table style="height: 209px;">
-            <tr class="data-summary__header">
-                <td colspan="2">Alarm Summary</td>
-            </tr>
-            <tr>
-                <td width="10%">LOS</td>
-                <td><span>{{totals.los.count}}</span></td>
-            </tr>
-            <tr>
-                <td width="10%">LOF</td>
-                <td><span>{{totals.lof.count}}</span></td>
-            </tr>
-            <tr>
-                <td width="10%">REM</td>
-                <td><span>{{totals.rem.count}}</span></td>
-            </tr>
-            <tr>
-                <td width="10%">AIS</td>
-                <td><span>{{totals.ais.count}}</span></td>
-            </tr>
-        </table>
+    <div class="xl-6-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+        <div class="card">
+            <h2>Circuit Information</h2>
+            <table class="circuit-table">
+                <tr>
+                    <td>VCID</td>
+                    <td>Orig VHID</td>
+                    <td>Term VHID</td>
+                    <td>Link</td>
+                    <td>Speed</td>
+                    <td>Provider</td>
+                    <td>Last Mile</td>
+                    <td>LEC Circuit ID</td>
+                </tr>
+                <tr>
+                    <td>{{circuit.VCID}}</td>
+                    <td>{{circuit.ORIGVHID}}</td>
+                    <td>{{circuit.TERMVHID}}</td>
+                    <td>{{circuit.LINK}}</td>
+                    <td>{{circuit.SPEED}}</td>
+                    <td>{{circuit.PROVIDER}}</td>
+                    <td>{{circuit.LASTMILE}}</td>
+                    <td>{{circuit.LECCIRCUITID}}</td>
+                </tr>
+            </table>
+        </div>
     </div>
-
-    <div class="clear"></div>
+    <div class="xl-2-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+        <div class="card">card 9</div>
+    </div>
 </div>
