--- a/public/css/main.css
+++ b/public/css/main.css
@@ -360,6 +360,11 @@ body {
     /*font-weight: 700;*/
 }
 
+.circuit-table {
+    font-size: 11px;
+    width: 100%;
+}
+
 .data-summary {
     width: 28%;
     margin-bottom: 12px;
@@ -390,6 +395,15 @@ body {
 #grid1 {
     width: 100%;
     height: 400px;
+}
+
+.btn-red {
+    border: none;
+    background-color: #d35400;
+    padding: 6px 14px;
+    color: #fff;
+    font-weight: 700;
+    /*letter-spacing: 1px;*/
 }
 
 .btn-blue-left {
@@ -441,13 +455,13 @@ body {
 
 .filter-box__form-element {
     display: inline-block;
-    margin-right: 24px;
+    margin-right: 4px;
 }
 
 
 .filter-box__text-input {
     border: 1px solid #95a5a6;
-    padding: 5px;
+    padding: 6px;
     font-size: 0.875em
 }
 
@@ -474,6 +488,32 @@ body {
     background-position: 94% center;
 }
 
+/* ==========================================================================
+   Side Panel classes
+   ========================================================================== */
+
+.panel-container {
+    background-color: #fff;
+    position: fixed;
+    left: -300px;
+    top: 0;
+    z-index: 4;
+    height: 100%;
+    padding-top: 115px;
+    padding-left: 8px;
+    padding-right: 6px;
+    width: 300px;
+    /*display: none;*/
+    transition: 1s;
+    box-shadow: 0px 1px 3px #222;
+
+}
+
+.panel-open {
+    display: block;
+    transition: 1s;
+    left: 58px;
+}
 
 /* ==========================================================================
    Color classes
