--- a/public/css/main.css
+++ b/public/css/main.css
@@ -87,6 +87,11 @@ textarea {
     resize: vertical;
 }
 
+h1, h2, h3, h4, h5 {
+    margin: 0;
+    margin-bottom: 4px;
+}
+
 /* ==========================================================================
    Browser Upgrade Prompt
    ========================================================================== */
@@ -107,7 +112,7 @@ html, body {
 
 body {
     overflow-x: hidden;
-    background: #ccc;
+    background: #EAEAEA;
 }
 
 .header {
@@ -139,8 +144,15 @@ body {
     display: inline-block;
 }
 
+.hamburger {
+    float: left;
+    font-size: 0.875em;
+    padding-top: 20px;
+}
+
 .logo {
     float: left;
+    margin-left: 10px;
 }
 
 .navigation {
@@ -214,12 +226,13 @@ body {
 }
 
 .card {
-    border: 1px solid #aaa;
+    /*border: 1px solid #aaa;*/
     background-color: #fff;
-    box-shadow: 1px 1px 3px #222;
+    box-shadow: 1px 1px 1px #222;
     margin: 10px 0;
     padding: 10px;
     display: block;
+    text-align: left;
 }
 
 .nav-icon {
@@ -308,7 +321,7 @@ body {
     float: right;
     vertical-align: middle;
     margin-top: 10px;
-    margin-right: 5px;
+    margin-right: 24px;
 }
 
 .utility-bar > div {
