--- a/public/css/main.css
+++ b/public/css/main.css
@@ -125,7 +125,7 @@ body {
     background-repeat: no-repeat;
     color: #fff;
     padding: 8px;
-    height: 60px;
+    height: 40px;
     z-index: 99;
 }
 
@@ -155,9 +155,14 @@ body {
     margin-left: 10px;
 }
 
+.logo-img {
+    width: 80%;
+    height: 80%;
+}
+
 .navigation {
     position: fixed;
-    top: 70px;
+    top: 56px;
     z-index: 99;
     width: 100%;
     background: #FF8000;
@@ -221,8 +226,8 @@ body {
     /*float: left;*/
     display: inline-block;
     width: 93%;
-    margin-left: 75px;
-    margin-top: 110px;
+    margin-left: 70px;
+    margin-top: 90px;
 }
 
 .card {
@@ -320,7 +325,7 @@ body {
 .utility-bar {
     float: right;
     vertical-align: middle;
-    margin-top: 10px;
+    /*margin-top: 4px;*/
     margin-right: 24px;
 }
 
