--- a/public/template/pa.html
+++ b/public/template/pa.html
@@ -1,105 +1,176 @@
 <div class="wrap gutter-5-xl gutter-10-xs gutter-out-xs" cg-busy="{promise:promise,message:'Loading Your Data...'}">
-    <div class="xl-4-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
-        <div class="card">
-            <h4>Customer and Site Information</h4>
-            <div>
-                <div class="vlid-select">CAEDUB23</div><!--
-                --><div class="wrapper-demo"><!--
-                    --><div id="dd" class="wrapper-dropdown-1" tabindex="1"><!--
-                        --><span>CAEDUB12-AVIALL-RTR-2</span><!--
-                        --><ul class="dropdown" tabindex="1">
-                            <!-- add an ng-click to trigger search when selecting from this list -->
-                            <li><a href="#">CAEDUB12-AVIALL-RTR-3</a></li>
-                            <li><a href="#">CAEDUB12-MONDELEZ-RTR-4</a></li>
-                        </ul>
+    <div class="xl-6-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+        <div class="wrap wrap gutter-5-xl gutter-10-xs gutter-out-xs">
+            <div class="xl-4-6 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                <div class="card">
+                    <h4>Customer and Site Information</h4>
+                    <div>
+                        <div class="vlid-select">CAEDUB23</div><!--
+                        --><div class="wrapper-demo"><!--
+                            --><div id="dd" class="wrapper-dropdown-1" tabindex="1"><!--
+                                --><span>CAEDUB12-AVIALL-RTR-2</span><!--
+                                --><ul class="dropdown" tabindex="1">
+                                    <!-- add an ng-click to trigger search when selecting from this list -->
+                                    <li><a href="#">CAEDUB12-AVIALL-RTR-3</a></li>
+                                    <li><a href="#">CAEDUB12-MONDELEZ-RTR-4</a></li>
+                                </ul>
+                            </div>
+                        ​</div>
                     </div>
-                ​</div>
+                </div>
+            </div>
+            <div class="xl-2-6 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                <div class="card">
+                    <h4>Escalation Information</h4>
+                </div>
+            </div>
+            <div class="xl-1-1 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                <div class="card">
+                    <h4>Circuit Information</h4>
+                    <table class="circuit-table">
+                        <tr class="belieze-hole">
+                            <th>VCID</th>
+                            <th>Orig VHID</th>
+                            <th>Term VHID</th>
+                            <th>Link</th>
+                            <th>Speed</th>
+                            <th>Provider</th>
+                            <th>Last Mile</th>
+                            <th>LEC Circuit ID</th>
+                        </tr>
+                        <tr ng-repeat="circuit in circuits" ng-class-even="'even'">
+                            <td><a href="{{circuit.vcomlink}}">{{circuit.vcid}}</a></td>
+                            <td>{{circuit.origvhid}}</td>
+                            <td>{{circuit.termvhid}}</td>
+                            <td>{{circuit.linktype}}</td>
+                            <td>{{circuit.speed}}</td>
+                            <td>{{circuit.provider}}</td>
+                            <td>{{circuit.lastmile}}</td>
+                            <td>{{circuit.LEC}}</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="xl-3-6 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                <div class="card">
+                    <h4>Hardware Information</h4>
+                    <table class="interface-table">
+                        <tr class="belieze-hole">
+                            <th>LCF Flag</th>
+                            <th>Model</th>
+                            <th>Serial #</th>
+                            <th>Type</th>
+                        </tr>
+                        <tr ng-repeat="hardware in hardware" ng-class-even="'even'">
+                            <td>{{hardware.lcf_flag}}</td>
+                            <td>{{hardware.model}}</td>
+                            <td>{{hardware.serial}}</td>
+                            <td>{{hardware.type}}</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="xl-3-6 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                <div class="card">
+                    <h4>Interface Information</h4>
+                    <table class="interface-table">
+                        <tr class="belieze-hole">
+                            <th>VHID</th>
+                            <th>Status</th>
+                            <th>Mgt Status</th>
+                            <th>IP</th>
+                        </tr>
+                        <tr ng-repeat="ifData in ifData" ng-class-even="'even'">
+                            <td>{{ifData.vhid}}</td>
+                            <td>{{ifData.status}}</td>
+                            <td>{{ifData.mgtstatus}}</td>
+                            <td>{{ifData.IP}}</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="xl-1-1 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                <div class="card">
+                    <h4>Maintenance Tickets</h4>
+                </div>
+            </div>
+            <div class="xl-3-6 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                <div class="card">
+                    <h4>Out of Band Information</h4>
+                    <table class="interface-table">
+                        <tr class="belieze-hole">
+                            <th>VHID</th>
+                            <th>Number</th>
+                            <th>Comments</th>
+                            <th>Last Status</th>
+                        </tr>
+                        <tr ng-repeat="oob in oob" ng-class-even="'even'">
+                            <td>{{oob.vhid}}</td>
+                            <td>{{oob.number}}</td>
+                            <td>{{oob.comments}}</td>
+                            <td>{{oob.last_status}}</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="xl-3-6 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                <div class="card">
+                    <h4>NERC Events</h4>
+                    <table class="interface-table">
+                        <tr class="belieze-hole">
+                            <th>VHID</th>
+                            <th>Date</th>
+                            <th>Type</th>
+                            <th>Subtype</th>
+                            <th>Source</th>
+                            <th>Ticket</th>
+                        </tr>
+                        <tr ng-repeat="nerc in nerc" ng-class-even="'even'">
+                            <td>{{nerc.vhid}}</td>
+                            <td>{{nerc.date | date:'d-MMM-yy'}}</td>
+                            <td>{{nerc.type}}</td>
+                            <td>{{nerc.subtype}}</td>
+                            <td>{{nerc.source}}</td>
+                            <td>{{nerc.ticket}}</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
     <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
-        <div class="card">
-            <h4>Escalation Information</h4>
-        </div>
-    </div>
-    <div class="xl-2-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
-        <div ng-click="expand('card3')" class="card">card 3</div>
-    </div>
-    <div class="xl-6-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-        <div class="card">
-            <h4>Circuit Information</h4>
-            <table class="circuit-table">
-                <tr class="belieze-hole">
-                    <th>VCID</th>
-                    <th>Orig VHID</th>
-                    <th>Term VHID</th>
-                    <th>Link</th>
-                    <th>Speed</th>
-                    <th>Provider</th>
-                    <th>Last Mile</th>
-                    <th>LEC Circuit ID</th>
-                </tr>
-                <tr ng-repeat="circuit in circuits" ng-class-even="'even'">
-                    <td><a href="{{circuit.vcomlink}}">{{circuit.vcid}}</a></td>
-                    <td>{{circuit.origvhid}}</td>
-                    <td>{{circuit.termvhid}}</td>
-                    <td>{{circuit.linktype}}</td>
-                    <td>{{circuit.speed}}</td>
-                    <td>{{circuit.provider}}</td>
-                    <td>{{circuit.lastmile}}</td>
-                    <td>{{circuit.LEC}}</td>
-                </tr>
-            </table>
-        </div>
-    </div>
-    <div class="xl-2-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-        <div class="card">card 9</div>
-    </div>
-    <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-        <div class="card">
-            <h4>Interface Information</h4>
-            <table class="interface-table">
-                <tr class="belieze-hole">
-                    <th>VHID</th>
-                    <th>Status</th>
-                    <th>Mgt Status</th>
-                    <th>IP</th>
-                </tr>
-                <tr ng-repeat="ifData in ifData" ng-class-even="'even'">
-                    <td>{{ifData.vhid}}</td>
-                    <td>{{ifData.status}}</td>
-                    <td>{{ifData.mgtstatus}}</td>
-                    <td>{{ifData.IP}}</td>
-                </tr>
-            </table>
-        </div>
-    </div>
-    <div class="xl-4-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-        <div class="card">card 6</div>
-    </div>
-    <div class="xl-6-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-        <div class="card">
-            <h4>Maintenance Tickets</h4>
-        </div>
-    </div>
-    <div class="xl-2-8 lg-1-1 md-1-1 sm-1-1 xs-1-1">
-        <div class="card">
-            <h4>Comments</h4>
-            <table class="interface-table">
-                <tr class="peter-river">
-                    <th width="20%">Date</th>
-                    <th>Comment</th>
-                    <th width="20%">User</th>
-                </tr>
-                <tr ng-repeat="comment in comments | limitTo:-4" ng-class-even="'even'">
-                    <td>{{comment.date | date:'d-MMM-yy'}}</td>
-                    <td>{{comment.comment}}</td>
-                    <td>{{comment.user}}</td>
-                </tr>
-            </table>
-            <div class="add-comment">
-                <input class="filter-box__text-input" ng-model="newcomment" type="text"/>
-                <button class="btn orange" ng-click="addComment(newcomment)">Add</button>
+        <div class="wrap">
+            <div class="xl-1-1 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                <div ng-click="expand('card3')" class="card">Graph 1</div>
+            </div>
+            <div class="xl-1-1 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+                <div ng-click="expand('card3')" class="card">Graph 2</div>
+            </div>
+            <div class="xl-1-1 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                <div class="card">
+                    <h4>Comments</h4>
+                    <table class="comments-table">
+                        <tr class="peter-river">
+                            <th width="20%">Date</th>
+                            <th>Comment</th>
+                            <th width="20%">User</th>
+                        </tr>
+                        <tr ng-repeat="comment in comments | limitTo:-4" ng-class-even="'even'">
+                            <td>{{comment.date | date:'d-MMM-yy'}}</td>
+                            <td>{{comment.comment}}</td>
+                            <td>{{comment.user}}</td>
+                        </tr>
+                    </table>
+                    <div class="add-comment">
+                        <textarea class="comment-box" ng-model="newcomment"></textarea>
+                        <button class="btn orange btn-comment" ng-click="addComment(newcomment)">Add</button>
+                    </div>
+                </div>
+            </div>
+            <div class="xl-1-1 lg-1-1 md-1-1 sm-1-1 xs-1-1">
+                <div class="card">
+                    <h4>Documents</h4>
+                </div>
             </div>
         </div>
     </div>
