--- a/public/template/pa.html
+++ b/public/template/pa.html
@@ -98,7 +98,7 @@
                 <div class="card">
                     <h4>Out of Band Information</h4>
                     <table class="interface-table">
-                        <tr class="belieze-hole">
+                        <tr class="peter-river">
                             <th>VHID</th>
                             <th>Number</th>
                             <th>Comments</th>
@@ -117,7 +117,7 @@
                 <div class="card">
                     <h4>NERC Events</h4>
                     <table class="interface-table">
-                        <tr class="belieze-hole">
+                        <tr class="peter-river">
                             <th>VHID</th>
                             <th>Date</th>
                             <th>Type</th>
