--- a/public/css/main.css
+++ b/public/css/main.css
@@ -151,7 +151,13 @@ body {
 .hamburger {
     float: left;
     font-size: 0.875em;
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-left: 7px;
+}
+
+.hamburger > img {
+    width: 24px;
+    height: 24px;
 }
 
 .logo {
@@ -217,7 +223,7 @@ body {
 
 .side-list {
     margin: 0;
-    margin-top: 100px;
+    margin-top: 108px;
     padding: 0;
     padding-right: 3px;
 }
@@ -228,7 +234,8 @@ body {
     color: #fff;
     text-transform: uppercase;
     text-align: center;
-    padding-top: 48px;
+    padding-bottom: 24px;
+    cursor: pointer;
 }
 
 .cardui {
@@ -248,6 +255,29 @@ body {
     display: block;
     text-align: left;
     vertical-align: middle;
+}
+
+.card-header > h4{
+    float: left;
+}
+
+.card-header > img {
+    float: right;
+    width: 16px;
+    height: 16px;
+}
+
+.card-handle {
+    cursor: pointer;
+}
+
+.side-icon > img {
+    width: 24px;
+    height: 24px;
+}
+
+.side-img {
+    margin-bottom: 6px;
 }
 
 .nav-icon {
@@ -418,7 +448,7 @@ body {
 
 .comment-box {
     vertical-align: middle;
-    width: 75%;
+    width: 72%;
     height: 45px;
 
 }
