--- a/public/template/pa.html
+++ b/public/template/pa.html
@@ -1,10 +1,13 @@
 <div class="wrap gutter-5-xl gutter-10-xs gutter-out-xs" cg-busy="{promise:promise,message:'Loading Your Data...'}">
     <div class="xl-6-8 lg-4-8 md-3-6 sm-2-4 xs-1-1">
         <div class="wrap wrap gutter-5-xl gutter-10-xs gutter-out-xs">
-            <div class="xl-4-6 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+            <div class="xl-3-6 lg-4-8 md-3-6 sm-2-4 xs-1-1">
                 <div class="card">
                     <h4>Customer and Site Information</h4>
                     <div>
+                        Customer Name: {{customer.customer_name}}<br/>
+                        CSN: {{customer.csn}}<br/>
+                        Master Account ID {{customer.master_acc_id}}<br/>
                         <div class="vlid-select">CAEDUB23</div><!--
                         --><div class="wrapper-demo"><!--
                             --><div id="dd" class="wrapper-dropdown-1" tabindex="1"><!--
@@ -19,9 +22,14 @@
                     </div>
                 </div>
             </div>
-            <div class="xl-2-6 lg-4-8 md-3-6 sm-2-4 xs-1-1">
+            <div class="xl-3-6 lg-4-8 md-3-6 sm-2-4 xs-1-1">
                 <div class="card">
-                    <h4>Escalation Information</h4>
+                    <div class="card-header">
+                        <h4>Escalation Information</h4>
+                        <img src="img/show8.svg" class="card-handle" />
+                    </div>
+                    <div class="clear"></div>
+                    <div class="card-content">Content</div>
                 </div>
             </div>
             <div class="xl-1-1 lg-1-1 md-1-1 sm-1-1 xs-1-1">
