additional visual styling

--- a/public/template/pa.html
+++ b/public/template/pa.html
@@ -3,8 +3,13 @@
         <div class="wrap wrap gutter-5-xl gutter-10-xs gutter-out-xs">
             <div class="xl-3-6 lg-4-8 md-3-6 sm-2-4 xs-1-1">
                 <div class="card">
-                    <h4>Customer and Site Information</h4>
-                    <div>
+                    
+                    <div class="card-header">
+                        <h4>Customer and Site Information</h4>
+                        <img src="img/show8.svg" class="card-handle" />
+                    </div>
+                    <div class="clear"></div>
+                    <div class="card-content">
                         Customer Name: {{customer.customer_name}}<br/>
                         CSN: {{customer.csn}}<br/>
                         Master Account ID {{customer.master_acc_id}}<br/>
