--- a/public/css/main.css
+++ b/public/css/main.css
@@ -249,7 +249,7 @@ body {
 .card {
     /*border: 1px solid #aaa;*/
     background-color: #fff;
-    box-shadow: 1px 1px 1px #222;
+    box-shadow: 1px 1px 1px #aaa;
     margin: 5px 0;
     padding: 10px;
     display: block;
