--- a/public/template/pa.html
+++ b/public/template/pa.html
@@ -183,6 +183,20 @@
             <div class="xl-1-1 lg-1-1 md-1-1 sm-1-1 xs-1-1">
                 <div class="card">
                     <h4>Documents</h4>
+                    <div class="doc-item">
+                        <img src="img/docx1.svg" class="doc-icon" />
+                        <div class="doc-label-block">
+                            <span class="doc-filename">Design Document</span><br/>
+                            <span class="doc-date">15-Jun-15</span>
+                        </div>
+                    </div>
+                    <div class="doc-item">
+                        <img src="img/docx1.svg" class="doc-icon" />
+                        <div class="doc-label-block">
+                            <span class="doc-filename">Design Document</span><br/>
+                            <span class="doc-date">15-Jun-15</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
